Form alignment fix for forms

--- a/assets/front-end/sass/contact-form-7/index.scss
+++ b/assets/front-end/sass/contact-form-7/index.scss
@@ -8,7 +8,7 @@
 	float: none;
 }
 
-.eael-contact-form-align-center { float: none; margin: 0 auto; }
+
 
 
 .eael-contact-form-7.eael-contact-form-btn-align-left input.wpcf7-submit {
@@ -16,16 +16,13 @@
 	width: auto;
 }
 
-.eael-contact-form-align-left { margin: 0 auto 0 0; }
+
 
 
 .eael-contact-form-7.eael-contact-form-btn-align-right input.wpcf7-submit {
 	float: right;
 	width: auto;
 }
-
-.eael-contact-form-align-right { margin: 0 0 0 auto; }
-
 
 
 .eael-contact-form-7 textarea,
